--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <script src="./Model/Model.js"></script>
   <script src="./Controller/Controller.js"></script>
   <script src="./Managers/ModelManager.js"></script>
+  <script src="./Basic Components/Component.js"></script>
+  <script src="./Basic Components/SelectComponent.js"></script>
   <script src="./MakeIt.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
