Updated SelectComponent.js and added InputComponent.js file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="./MakeIt.js"></script>
   <script src="./Basic Components/Component.js"></script>
   <script src="./Basic Components/SelectComponent.js"></script>
+  <script src="./Basic Components/InputComponent.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
