Updates to files

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     .title {
       color:white;
     }
+    #componentList {
+        height:100%;
+    }
     </style>
   </head>
   <body id="mainBody">
@@ -42,6 +45,17 @@
         <div id="componentList" class="row-fluid">
           
         </div>
+      </div>
+      <div id="mainContent" class="container-fluid">
+          <div id="contactname" class="row-fluid">
+            <h1>Name</h1>
+          </div>
+          <div id="email" class="row-fluid">
+            <h1>Email</h1>
+          </div>
+          <div id="number" class="row-fluid">
+            <h1>Number</h1>
+          </div>
       </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
